# svelte-language-tools

./: .gitignore  Cargo.toml  README.md
app/: .eslintrc  README.md  package-lock.json  package.json  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  tsconfig.json
app/src/: app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/src/routes/: +layout.svelte  +page.svelte
shared/: Cargo.toml
shared/src/: lib.rs
