[package]
name = "app"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
tauri = { version = "1.3.0", features = [] }
shared = { path = "../../shared" }

[features]
custom-protocol = ["tauri/custom-protocol"]
